Add styles in sass form

--- a/resources/sass/0.base/_classes.sass
+++ b/resources/sass/0.base/_classes.sass
@@ -1,5 +1,14 @@
+
+.medium-size
+    font-size: 1.8rem
+.ml-10
+    margin-left: 20px
+.mb-10
+    margin-bottom: 10px
 .uppercase
     text-transform: uppercase
+.capitalize
+    text-transform: capitalize
 .center
     text-align: center
 .justify
@@ -9,3 +18,9 @@
     padding-top: 10px
 .seperate-line
     background-color: $green-1
+
+.block
+    display: block
+.inline-block
+    display: inline-block
+
