--- a/resources/sass/0.base/_base-template.sass
+++ b/resources/sass/0.base/_base-template.sass
@@ -21,7 +21,7 @@
 #slider
     margin-top: 72px!important
 .feature
-    padding-top: 90px!important
+    padding-top: 70px!important
     .feature-txt p
         font-size: 2.5rem
         font-family: "Bree Serif"
@@ -134,7 +134,7 @@
     padding: 0
 
 #banner
-    margin-top: 90px!important
+    margin-top: 70px!important
 .default-portfolio-item
     cursor: pointer
 
@@ -161,6 +161,8 @@
         visibility: visible
         height: auto
         transform: none
+        .box-title
+            font-size: 1.5rem
         p
             transform: none
             opacity: 1
