--- a/resources/sass/3-mobile/_products.sass
+++ b/resources/sass/3-mobile/_products.sass
@@ -1,7 +1,8 @@
-.products-grid
-    .mix
-        padding: 0 50px
-        .inner-box
-            margin-bottom: 0
-        .overlay-box p
-            padding: 0
+@media screen and (max-width: 768px)
+    .products-grid
+        .mix
+            padding: 0 50px
+            .inner-box
+                margin-bottom: 0
+            .overlay-box p
+                padding: 0
