Add classes for margins / paddings

--- a/resources/sass/0.base/_classes.sass
+++ b/resources/sass/0.base/_classes.sass
@@ -1,10 +1,74 @@
 
 .medium-size
     font-size: 1.8rem
-.ml-10
+
+// MARGIN / PADDING CLASSES
+.m-10
+    margin: 10px
+.m-30
+    margin: 30px
+.m-50
+    margin: 50px
+
+.mrl-10
+    margin-left: 10px
+    margin-right: 10px
+.mrl-30
+    margin-left: 30px
+    margin-right: 30px
+.mrl-50
+    margin-left: 50px
+    margin-right: 50px
+
+.mtb-10
+    margin-top: 10px
+    margin-bottom: 10px
+.mtb-30
+    margin-top: 30px
+    margin-bottom: 30px
+.mtb-50
+    margin-top: 50px
+    margin-bottom: 50px
+
+.ml-20
     margin-left: 20px
 .mb-10
     margin-bottom: 10px
+.mb-30
+    margin-bottom: 30px
+.mb-50
+    margin-bottom: 50px
+
+.mt-10
+    margin-top: 10px
+.mt-30
+    margin-top: 30px
+.mt-50
+    margin-top: 50px
+
+.prl-10
+    padding-left: 10px
+    padding-right: 10px
+.prl-30
+    padding-left: 30px
+    padding-right: 30px
+.prl-50
+    padding-left: 50px
+    padding-right: 50px
+
+.ptb-10
+    padding-top: 10px
+    padding-bottom: 10px
+.ptb-30
+    padding-top: 30px
+    padding-bottom: 30px
+.ptb-50
+    padding-top: 50px
+    padding-bottom: 50px
+
+
+// TEXT CLASSES
+
 .uppercase
     text-transform: uppercase
 .capitalize
@@ -16,11 +80,30 @@
 .upperline
     border-top: 3px solid $green-1
     padding-top: 10px
+
+// SECTION CLASSES
+
 .seperate-line
     background-color: $green-1
 
+.section-title-line
+    width: 300px
+    height: 2px
+    margin-bottom: 20px
+    border: $green-1
+    background-color: $green-1
+.section-title
+    // font-weight: 700
+    margin-bottom: 40px
+    font-size: 5rem
+    // padding-top: 30px
+
+// DISPLAY CLASSES
+
 .block
     display: block
+.inline
+    display: inline
 .inline-block
     display: inline-block
 
