--- a/public/css/custom-style-bundle.css
+++ b/public/css/custom-style-bundle.css
@@ -226,12 +226,104 @@
   font-size: 1.8rem;
 }
 
-.ml-10 {
+.m-10 {
+  margin: 10px;
+}
+
+.m-30 {
+  margin: 30px;
+}
+
+.m-50 {
+  margin: 50px;
+}
+
+.mrl-10 {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.mrl-30 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.mrl-50 {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.mtb-10 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.mtb-30 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.mtb-50 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.ml-20 {
   margin-left: 20px;
 }
 
 .mb-10 {
   margin-bottom: 10px;
+}
+
+.mb-30 {
+  margin-bottom: 30px;
+}
+
+.mb-50 {
+  margin-bottom: 50px;
+}
+
+.mt-10 {
+  margin-top: 10px;
+}
+
+.mt-30 {
+  margin-top: 30px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.prl-10 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.prl-30 {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.prl-50 {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.ptb-10 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.ptb-30 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.ptb-50 {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .uppercase {
@@ -259,8 +351,25 @@
   background-color: #00984B;
 }
 
+.section-title-line {
+  width: 300px;
+  height: 2px;
+  margin-bottom: 20px;
+  border: #00984B;
+  background-color: #00984B;
+}
+
+.section-title {
+  margin-bottom: 40px;
+  font-size: 5rem;
+}
+
 .block {
   display: block;
+}
+
+.inline {
+  display: inline;
 }
 
 .inline-block {
@@ -404,15 +513,15 @@
   overflow: hidden;
 }
 
-.project_slide .project-grid {
+.infinite_slide .item-grid {
   margin-bottom: 0;
 }
 
-.project_slide .project-img:hover a.btn-default {
+.infinite_slide .item-img:hover a.btn-default {
   transform: translate(-50%, -50%) scale(1.2);
 }
 
-.project_slide .owl-controls {
+.infinite_slide .owl-controls {
   display: none;
 }
 
@@ -1035,5 +1144,100 @@
   .products-grid .mix .overlay-box p {
     padding: 0;
   }
+}
+
+.application_message .input-group {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+}
+
+.application_message .input-group > .custom-file {
+  display: flex;
+  align-items: center;
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  margin-bottom: 0;
+}
+
+.application_message .input-group > .custom-file:not(:last-child) .custom-file-label,
+.application_message .input-group > .custom-file:not(:last-child) .custom-file-label::before {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.application_message .input-group > .input-group-append > .btn,
+.application_message .input-group > .input-group-append > .input-group-text,
+.application_message .input-group > .input-group-prepend:first-child > .btn:not(:first-child),
+.application_message .input-group > .input-group-prepend:first-child > .input-group-text:not(:first-child),
+.application_message .input-group > .input-group-prepend:not(:first-child) > .btn,
+.application_message .input-group > .input-group-prepend:not(:first-child) > .input-group-text {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.application_message .custom-file {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: calc(3.25rem + 11px);
+  margin-bottom: 0;
+}
+
+.application_message .custom-file-input {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: calc(3.25rem + 11px);
+  margin: 0;
+  opacity: 0;
+}
+
+.application_message .custom-file-label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  height: calc(3.25rem + 11px);
+  padding: 0.5rem 1rem;
+  line-height: 2;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+}
+
+.application_message .custom-file-label::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 3;
+  display: block;
+  height: calc(calc(3.25rem + 11px) - 1px * 2);
+  padding: 0.5rem 1rem;
+  line-height: 2;
+  color: #495057;
+  content: "Browse";
+  background-color: #e9ecef;
+  border-left: 1px solid #ced4da;
+  border-radius: 0 0.25rem 0.25rem 0;
+}
+
+.application_message .input-group-append {
+  margin-left: -1px;
+}
+
+.application_message .input-group-append,
+.application_message .input-group-prepend {
+  display: flex;
+}
+
+.application_message .message {
+  margin-top: 20px;
 }
 
