Change classes for products according to the markup

--- a/resources/sass/0.base/_base-template.sass
+++ b/resources/sass/0.base/_base-template.sass
@@ -118,10 +118,10 @@
 //     width: 100%!important
 
 
-.project_slide
-    .project-grid
+.infinite_slide
+    .item-grid
         margin-bottom: 0
-    .project-img:hover a.btn-default
+    .item-img:hover a.btn-default
         transform: translate(-50%, -50%) scale(1.2)
     // .owl-item
     //     margin-right: 0!important
