Add styles for application form

--- a/resources/sass/2-layouts/_layouts-dir.sass
+++ b/resources/sass/2-layouts/_layouts-dir.sass
@@ -1,6 +1,8 @@
-/* LAYOUTS */    
-    
+/* LAYOUTS */
+
 // @import "header"
 @import "feature"
 // @import "content"
 // @import "footer"
+
+@import "application-career"
