--- a/resources/sass/0.base/_classes.sass
+++ b/resources/sass/0.base/_classes.sass
@@ -3,13 +3,26 @@
     font-size: 1.8rem
 
 // MARGIN / PADDING CLASSES
+.m-0
+    margin: 0
 .m-10
     margin: 10px
 .m-30
     margin: 30px
 .m-50
     margin: 50px
-
+.p-0
+    padding: 0
+.p-10
+    padding: 10px
+.p-30
+    padding: 30px
+.p-50
+    padding: 50px
+// MARGIN / PADDING RIGHT-LEFT
+.mrl-0
+    margin-left: 0
+    margin-right: 0
 .mrl-10
     margin-left: 10px
     margin-right: 10px
@@ -19,7 +32,20 @@
 .mrl-50
     margin-left: 50px
     margin-right: 50px
+.prl-0
+    padding-left: 0
+    padding-right: 0
+.prl-10
+    padding-left: 10px
+    padding-right: 10px
+.prl-30
+    padding-left: 30px
+    padding-right: 30px
+.prl-50
+    padding-left: 50px
+    padding-right: 50px
 
+// MARGIN / PADDING TOP-BOTTOM
 .mtb-10
     margin-top: 10px
     margin-bottom: 10px
@@ -29,6 +55,16 @@
 .mtb-50
     margin-top: 50px
     margin-bottom: 50px
+
+.ptb-10
+    padding-top: 10px
+    padding-bottom: 10px
+.ptb-30
+    padding-top: 30px
+    padding-bottom: 30px
+.ptb-50
+    padding-top: 50px
+    padding-bottom: 50px
 
 .ml-20
     margin-left: 20px
@@ -45,26 +81,6 @@
     margin-top: 30px
 .mt-50
     margin-top: 50px
-
-.prl-10
-    padding-left: 10px
-    padding-right: 10px
-.prl-30
-    padding-left: 30px
-    padding-right: 30px
-.prl-50
-    padding-left: 50px
-    padding-right: 50px
-
-.ptb-10
-    padding-top: 10px
-    padding-bottom: 10px
-.ptb-30
-    padding-top: 30px
-    padding-bottom: 30px
-.ptb-50
-    padding-top: 50px
-    padding-bottom: 50px
 
 
 // TEXT CLASSES
@@ -95,8 +111,14 @@
 .section-title
     // font-weight: 700
     margin-bottom: 40px
-    font-size: 5rem
+    font-size: 3rem
     // padding-top: 30px
+
+.sub-section-title
+    padding: 2rem
+    margin: 2rem 3rem
+    background-color: $green-1
+    color: #fff
 
 // DISPLAY CLASSES
 
