--- a/resources/sass/_custom-variables.sass
+++ b/resources/sass/_custom-variables.sass
@@ -22,6 +22,8 @@ $light : #FAFAFA
 $dark-gray: #333
 $light-gray: #aaa
 $tiny-blue: #e8f0fe
+
+$green-1: #00984B
 // $bg-dark-row: $dark
 // $color-dark-row: $white
 // $bg-white-row: $white
